# guru-swift-sdk

./: LICENSE  Package.resolved  Package.swift  README.md
.swiftpm/xcode/xcshareddata/xcschemes/: GuruSwiftSDK.xcscheme
Sources/C/: bridge.c  module.modulemap
Sources/C/include/: bridge.h
Sources/GuruSwiftSDK/: APIAuth.swift  Activity.swift  Analysis.swift  AnalysisPainter.swift  Errors.swift  GuruAPIClient.swift  GuruAnalysis.swift  GuruEngine.swift  GuruSwiftSDK.swift  GuruVideo.swift  InferenceConsumer.swift  InferencePainter.swift  J2P.swift  KeypointPainter.swift  LocalVideoInference.swift  MathUtils.swift  ModelStore.swift  MultipartFormData.swift  OverlayType.swift  PoseEstimation.swift  RemoteVideoInference.swift  UploadResult.swift  Video.swift  VipnasEndToEnd.swift
Sources/GuruSwiftSDK/Resources/javascript.bundle/javascript/: guru_stdlib.mjs  inference_utils.mjs  models.mjs
Sources/GuruSwiftSDK/VipnasEndToEnd.mlmodelc/: metadata.json  model.mil
Sources/libgurucv/: CMakeLists.txt  preprocess.cpp.bak
Sources/libgurucv/apps/: CMakeLists.txt  runner.cpp
Sources/libgurucv/include/libgurucv/: cutils.h  engine.hpp  guru_opencv.hpp  onnx.hpp  preprocess.hpp
Sources/libgurucv/src/: CMakeLists.txt  engine.cpp  guru_opencv.cpp  onnx.cpp  preprocess.cpp  test_preprocess.cpp
Tests/GuruSwiftSDKTests/: AnalysisTests.swift  GuruAPIClientTests.swift  GuruSwiftSDKTests.swift  J2PTests.swift  ModelStoreTests.swift  PoseEstimationTests.swift  TestUtils.swift  VideoClientTests.swift
VipnasEndToEnd.mlpackage/: Manifest.json
VipnasEndToEnd.mlpackage/Data/com.apple.CoreML/: model.mlmodel
